--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <div id="game-container">
   <div id="players">
-    <div id="player0">Player 0 (<img src="https://cdn-icons-png.flaticon.com/512/1600/1600918.png" alt="Queen" height="40">) Wins: 0</div>
-    <div id="player1">Player 1 (<img src="https://png.pngtree.com/png-vector/20220629/ourmid/pngtree-blue-king-icon-flat-vector-png-image_5523073.png" alt="King" height="40">) Wins: 0</div>
+    <div id="player0">Queen(<img src="https://cdn-icons-png.flaticon.com/512/1600/1600918.png" alt="Queen" height="40">) Wins: 0</div>
+    <div id="player1">King(<img src="https://drive.google.com/file/d/1Jjc3dRw7xW2ttKgqLcXVQ4-x0b8dI9zs/view?usp=sharing" alt="King" height="40">) Wins: 0</div>
   </div>
 
   <div id="board"></div>
