--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
 
-<div id="game-container">
+<!-- Add a logo at the top -->
+<div id="logo-container">
+  <img src="royalxox.png" alt="Logo" style="width:300px;">
+</div>
+
+<div id="game-container" style="margin-top:-50px;">
   <div id="players">
-    <div id="player0">Queen(<img src="queen.png" alt="Queen" height="40">) Wins: 0</div>
-    <div id="player1">King(<img src="king.png" alt="King" height="40">) Wins: 0</div>
+    <div id="player0">Queen (<img src="queen.png" alt="Queen" height="40">) Wins: 0</div>
+    <div id="player1">King (<img src="king.png" alt="King" height="40">) Wins: 0</div>
   </div>
 
   <div id="board"></div>
@@ -23,4 +28,3 @@
 
 </body>
 </html>
-
