--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <!-- Add a logo at the top -->
 <div id="logo-container">
-  <img src="royalxox.png" alt="Logo" style="width:200px;margin-top:-100px">
+  <img src="royalxox.png" alt="Logo" style="width: 150px;margin-top: -181px;">
 </div>
 
-<div id="game-container" style="margin-top:-150px;">
+<div id="game-container" style="margin-top: -22px;">
   <div id="players">
     <div id="player0">Queen (<img src="queen.png" alt="Queen" height="40">) Wins: 0</div>
     <div id="player1">King (<img src="king.png" alt="King" height="40">) Wins: 0</div>
