--- a/25cells/index.html
+++ b/25cells/index.html
@@ -1,1 +1,31 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tic-Tac-Toe</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- Add a logo at the top -->
+<div id="logo-container">
+  <img src="royalxox.png" alt="Logo" style="width: 150px; margin-top: -181px;">
+</div>
+
+<div id="game-container" style="margin-top: -22px;">
+  <div id="players">
+    <div id="player0">Queen (<img src="queen.png" alt="Queen" height="80">) Wins: 0</div>
+    <div id="player1">King (<img src="king.png" alt="King" height="80">) Wins: 0</div>
+  </div>
+
+  <div id="board" class="five-by-five"></div>
+
+  <button id="play-again" style="display:none">Play Again</button>
+</div>
+
+<script src="script.js"></script>
+
+</body>
+</html>
